# cardnews

./: .gitignore  CLAUDE.md  Dockerfile.sandbox  GEMINI.md  LICENSE  README.md  config.example.json  llms.txt  pyproject.toml  run_tests_debug.sh
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: publish.yml
docs/: README.md  architecture.md  automation.md  config.md  developer_quickstart.md  installation.md  matrix-setup.md  system_overview.md
docs/modules/: api.md  background.md  bot.md  bus.md  cleanup.md  cli.md  cli_commands.md  config_reload.md  cron.md  files.md  heartbeat.md  infra.md  logging.md  matrix.md  messenger.md  multiagent.md  orchestrator.md  security.md  service_management.md  session.md  setup_wizard.md  skill_system.md  supervisor.md  tasks.md  text.md  webhook.md  workspace.md
ductor_bot/: __init__.py  __main__.py  _banner.txt  commands.py  config.py  config_reload.py  errors.py  log_context.py  logging_config.py
ductor_bot/_home_defaults/: RULES.md
ductor_bot/api/: __init__.py  crypto.py  server.py
ductor_bot/background/: __init__.py  models.py  observer.py
ductor_bot/bus/: __init__.py  adapters.py  bus.py  cron_sanitize.py  envelope.py  lock_pool.py
ductor_bot/cleanup/: __init__.py  observer.py
ductor_bot/cli/: __init__.py  auth.py  base.py  claude_provider.py  coalescer.py  codex_cache.py  codex_cache_observer.py  codex_discovery.py  codex_events.py  codex_provider.py  executor.py  factory.py  gemini_cache.py  gemini_cache_observer.py  gemini_events.py  gemini_provider.py  gemini_utils.py  init_wizard.py  model_cache.py  param_resolver.py  process_registry.py  service.py  stream_events.py  timeout_controller.py  types.py
ductor_bot/cli_commands/: __init__.py  agents.py  api_cmd.py  docker.py  install.py  lifecycle.py  service.py  status.py
ductor_bot/cron/: __init__.py  dependency_queue.py  execution.py  manager.py  observer.py
ductor_bot/files/: __init__.py  allowed_roots.py  browser.py  prompt.py  storage.py  tags.py
ductor_bot/heartbeat/: __init__.py  observer.py
ductor_bot/infra/: __init__.py  atomic_io.py  base_observer.py  base_task_observer.py  boot_id.py  docker.py  docker_extras.py  env_secrets.py  file_watcher.py  fs.py  inflight.py  install.py  json_store.py  pidlock.py  platform.py  process_tree.py  recovery.py  restart.py  service.py  service_base.py  service_linux.py  service_logs.py  service_macos.py  service_windows.py  startup_state.py  task_runner.py  updater.py  version.py
ductor_bot/messenger/: __init__.py  callback_router.py  capabilities.py  commands.py  multi.py  notifications.py  protocol.py  registry.py  send_opts.py
ductor_bot/multiagent/: __init__.py  bus.py  commands.py  health.py  internal_api.py  models.py  registry.py  shared_knowledge.py  stack.py  supervisor.py
ductor_bot/orchestrator/: __init__.py  commands.py  core.py  directives.py  flows.py  hooks.py  injection.py  lifecycle.py  observers.py  providers.py  registry.py
ductor_bot/security/: __init__.py  content.py  paths.py
ductor_bot/session/: __init__.py  key.py  manager.py  named.py
ductor_bot/tasks/: __init__.py  hub.py  models.py  registry.py
ductor_bot/text/: response_format.py
ductor_bot/utils/: quiet_hours.py
ductor_bot/webhook/: __init__.py  auth.py  manager.py  models.py  observer.py  server.py
ductor_bot/workspace/: __init__.py  cron_tasks.py  init.py  loader.py  paths.py  rules_selector.py  skill_sync.py
instagram-card-news-main/: AI_ENGINE_INTEGRATION.md  CLAUDE.md  HF_FREE_GUIDE.md  config.json
instagram-card-news-main/output/: CRM_README.md
instagram-card-news-main/scripts/: image-crawler-ai.js  image-crawler-hf.js  image-crawler-zai.js  image-crawler.js  image-sourcing.js  render.js
instagram-card-news-main/workspace/: debate-news-0312.md  discussion-2026-fashion-toss.md  discussion-2026ss-fashion-v2.md  discussion-2026ss-fashion-v3-photo.md  discussion-2026ss-fashion.md  mack-miller-fullimage.json  mack-miller-magazine.json  mack-miller.json  makhaller-hiphop.json  research-news-0312.md  slides-2026-fashion-toss.json  slides-2026ss-fashion-elegant-v2.json  slides-2026ss-fashion-elegant-v3-photo.json  slides-2026ss-fashion-elegant-v3.1-photo.json  slides-2026ss-fashion-elegant.json  slides-news-0312-v2.json  slides-news-0312-v3-images.json  slides-news-0312.json  slides-no-search.json  slides.json
tests/: conftest.py  test_commands.py  test_config.py  test_config_reload.py  test_errors.py  test_integration.py  test_logging_config.py  test_main.py  test_run.py
tests/api/: test_crypto.py  test_server_e2e.py  test_server_files.py
tests/background/: test_observer.py
tests/bus/: test_adapters.py  test_bus.py  test_envelope.py  test_lock_pool.py  test_observers_wire.py
tests/cleanup/: test_observer.py
tests/cli/: test_auth.py  test_auth_extended.py  test_claude_provider.py  test_types.py  (+26 more)
tmux-master/: screen-write.c  tty.c
(+250 files in other folders)
